--- a/src/assets/styles/notes.scss
+++ b/src/assets/styles/notes.scss
@@ -13,15 +13,16 @@ main {
     padding: 0 50px;
     display: flex;
     flex-wrap: wrap;
-    
-
   }
 }
-
-
+.fa-edit {
+  color: white;
+  font-size: 16px;
+}
+.note-transform {
+  transform: translateX(0) !important;
+}
 .note {
-  &:first-child {
-  }
   margin: 24px;
   height: 310px;
   width: 300px;
