--- a/src/assets/styles/notes.scss
+++ b/src/assets/styles/notes.scss
@@ -30,6 +30,8 @@ main {
   padding: 28px;
   background: #ffcf7d;
   position: relative;
+  overflow: hidden;
+
   textarea {
     background: none;
     border: none;
@@ -37,14 +39,15 @@ main {
     font-weight: 600;
     padding-right: 24px;
     outline: none;
-    font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
+    font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     resize: none;
     height: 100%;
     &::placeholder {
       color: #000;
     }
+    transform-origin: left;
+    animation: cardAnim 0.7s;
   }
   .footer {
     padding: 28px;
@@ -62,6 +65,7 @@ main {
       }
     }
     .edit {
+      animation: pop 0.7s;
       button {
         border-radius: 100%;
         background: #000;
@@ -78,5 +82,29 @@ main {
         }
       }
     }
+  }
+}
+
+@keyframes cardAnim {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes pop {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
   }
 }
